--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.19.1",
     "react": "18.2.0",
+    "react-async": "^10.0.1",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
     "react-native-elements": "^3.4.3",
