--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.19.1",
+    "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-async": "^10.0.1",
     "react-dom": "18.2.0",
